--- a/index.html
+++ b/index.html
@@ -1,7 +1,43 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>homework</title>
+</head>
+<body> 
+	<h1>welcome to my page</h1>
+	<a href="https://www.facebook.com/jiachih.yang">這是我的FB </a>
+	<h5>this is a joke</h5>
+	<p> 弟弟飯後點了椰果刨冰，結果吃到最後太飽，
+剩下因為最喜歡，故意留到最後的葡萄椰果吃不下。
+媽媽一臉幸災樂禍：「放棄吧，我們走ψ(｀∇´)ψ」
+弟弟滿臉驚恐「不！我最喜歡的耶果！不然打包？」
+
+.....你都剩下這看起來只有四口份量的椰果了，
+拿去給老闆說要打包，他會想扁你吧？
+於是弟弟開始分析：
+「硬吃，若全部吃完的話，我們稱之為上策；
+　打包，導致老版想扁人，我們稱之為中策；
+　放棄，就這樣放著回家，我們稱之為下策。」
+
+結果這時爸爸幽幽的拿著湯匙從旁邊冒出來，補了一刀：
+
+「在猶豫的時候，被旁邊跑出來的人吃光，我們稱之為失策。」</p>
+	
+	<div>
+
+	<span>LINE</span>
+	<span>熊大</span>
+	
+	<ul>
+		<li>好Q</li>
+		<li>胖胖</li>
+		<li>可愛</li>
+	</ul>
+
+	</div>
+
+	<img src="http://ext.pimg.tw/ifans/1380299366-1785635228.png">
+	
 </body>
 </html>
